# Splunk-autodoc

./: .gitignore  README.md  TEST_IMPLEMENTATION_PROGRESS.md  debug_test_generate_png.py  package-lock.json  phase-breakdown.md  test-phase-breakdown.md
.claude/: claude.md  settings.local.json
.claude/agents/: api-test-runner.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
Specs/: Spec.md
api/: .dockerignore  Dockerfile  README.md  alembic.ini  coverage.xml  pyproject.toml  pytest.ini
api/app/: __init__.py  config.py  database.py  healthcheck.py  main.py
api/app/migrations/: README  env.py
api/app/migrations/versions/: 2025_11_08_1010-499dfbedfda9_initial_schema.py  2025_11_08_1018-c169ee48cab3_remove_redundant_index_on_graphs_job_id.py  2025_11_08_1021-8519ba4bca56_add_check_constraint_for_job_timestamps_.py  2025_11_08_1212-e0e8921bcd37_add_server_defaults_for_status_and_.py
api/app/models/: __init__.py  base.py  finding.py  graph.py  job.py  project.py  upload.py
api/app/routers/: graphs.py  jobs.py  projects.py  uploads.py
api/app/schemas/: __init__.py  finding.py  graph.py  job.py  project.py  upload.py
api/app/services/: export.py  parser.py  processor.py  resolver.py  storage.py  validator.py
api/tests/: conftest.py
api/tests/fixtures/: splunk_configs.py
api/tests/integration/: test_api_jobs.py  test_api_projects.py  test_api_uploads.py
api/tests/unit/: test_export.py  test_parser.py  test_resolver.py  test_storage.py  test_validator.py
deploy/: .env.example  docker-compose.yml
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: upload-flow.spec.ts
frontend/public/: .gitkeep  README.md
frontend/src/: index.css  router.tsx
frontend/src/components/: EdgeInspector.tsx  ErrorBoundary.tsx  FilterPanel.tsx  Layout.tsx  NodeInspector.tsx  VisNetworkCanvas.tsx
frontend/src/hooks/: use-toast.ts  useDebounce.ts  useGraph.ts  useJobPolling.ts  useProjects.ts  useUpload.ts
frontend/src/lib/: api.ts  config.ts  edgeId.ts
frontend/src/pages/: Findings.tsx  GraphExplorer.tsx  NotFound.tsx  Projects.tsx  Upload.tsx
frontend/src/store/: filterSlice.ts  graphSlice.ts  index.ts  projectSlice.ts
frontend/src/test/: setup.ts  utils.tsx
(+8 files in other folders)
