[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-flow-api"
version = "2.0.0"
description = "Backend API for Splunk Event Flow Graph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Splunk Flow Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "gunicorn>=21.2.0,<22.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.25,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "httpx>=0.26.0,<0.27.0",
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.8.0,<2.0.0",
]
# Future additions for job queue
# redis = ["redis>=5.0.0,<6.0.0"]
# queue = ["rq>=1.15.0,<2.0.0"]  # or celery

[project.urls]
Homepage = "https://github.com/yourusername/splunk-flow"
Documentation = "https://github.com/yourusername/splunk-flow/docs"
Repository = "https://github.com/yourusername/splunk-flow"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "jose.*",
]
ignore_missing_imports = true
